Initial commit of Nodus 8.2