@@ -28,7 +28,6 @@ import java.io.FileNotFoundException;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.util.Scanner;
 import org.apache.commons.io.FileUtils;
 
 /**
@@ -42,11 +41,6 @@ import org.apache.commons.io.FileUtils;
  * <p>- The maximum heap is set to 50% of the RAM, with a maximum of 6Go.
  *
  * <p>For 32bits JVM, max heap is set to 1.4Go
- *
- * <p>Since Nodus 8.0, the additional --illegal-access=permit flag is set if JVM version is at least
- * 9. This is not really needed if JVM version lower than 16, but needed for JAVA 16. This should be
- * tackled more seriously in the Nodus core code as some reflective accesses, such as those called
- * to mimic Mac OS PLAF will no longer be allowed is future versions of the JVM.
  *
  * <p>Since Nodus 8.1, the additional -Dfile.encoding=UTF8 flag is set.
  *
@@ -81,9 +75,6 @@ public class SetJVMArgs {
       createScript(envtFileName, parameters);
     }
 
-    // Set the --illegal-access=permit flag if needed
-    setIllegalAccessFlag(envtFileName);
-    
     // Install the Times font if needed
     installTimesFontIfNeeded();
   }
@@ -182,65 +173,7 @@ public class SetJVMArgs {
     }
   }
 
-  /**
-   * Set the --illegal-access flag accordingly to the used JVM version at runtime.
-   *
-   * @param scriptFileName The name of the file that contains the JVMARGS
-   */
-  private void setIllegalAccessFlag(String scriptFileName) {
-    String line = "";
-    try {
-      String value = "";
-      Scanner scanner = new Scanner(new File(scriptFileName));
-      while (scanner.hasNextLine()) {
-        line = scanner.nextLine();
-        if (line.contains("JVMARGS")) {
-          // Get current value of args
-          int idx = line.indexOf("=");
-          value = line.substring(idx + 1);
-
-          // Remove double quotes, if any
-          value = value.replaceAll("\"", "");
-
-          boolean isAtLeastJava9 = JavaVersionUtil.isJavaVersionAtLeast(9);
-          String illelagAccessFlag = "--illegal-access=permit";
-          if (value.contains(illelagAccessFlag)) {
-            // Remove if JVM < 9
-            if (!isAtLeastJava9) {
-              value = value.replace("--illegal-access=permit", "");
-            }
-          } else {
-            // Add if JVM >= 9
-            if (isAtLeastJava9) {
-              value = value + " " + illelagAccessFlag;
-            }
-          }
-          value = value.trim();
-
-          break;
-        }
-      }
-      scanner.close();
-
-      // Write the file
-      FileWriter fileWriter = new FileWriter(scriptFileName);
-      BufferedWriter bufferedWriter = new BufferedWriter(fileWriter);
-
-      if (isRunningOnWindows()) {
-        line = "set JVMARGS=" + value;
-      } else {
-        line = "JVMARGS=\"" + value + "\"";
-      }
-
-      bufferedWriter.write(line);
-      bufferedWriter.close();
-      fileWriter.close();
-
-    } catch (IOException e) {
-      e.printStackTrace();
-    }
-  }
-
+  
   private void installTimesFontIfNeeded() {
 
     if (System.getProperty("os.name").toLowerCase().startsWith("mac")) {
